// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration::enter password should return enter password page with sign in analytics properties 1`] = `
Object {
  "contentId": "6b9f2243-d217-4c55-8ef3-7ac24b1f77e2",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter password should return error when csrf not present 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter password should return validation error when password is incorrect 1`] = `
Object {
  "contentId": "6b9f2243-d217-4c55-8ef3-7ac24b1f77e2",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter password should return validation error when password not entered 1`] = `
Object {
  "contentId": "6b9f2243-d217-4c55-8ef3-7ac24b1f77e2",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
